RESOLVED FIXED48047
Fix warnings found by check-Xcode-source-file-types
https://bugs.webkit.org/show_bug.cgi?id=48047
Summary Fix warnings found by check-Xcode-source-file-types
David Kilzer (:ddkilzer)
Reported 2010-10-21 00:49:28 PDT
Created attachment 71399 [details] Patch Reviewed by NOBODY (OOPS!). WebCore: Fixes the following warning: WARNING: Unknown file type 'sourcecode' for file 'CSSPrimitiveValue.idl'. 1 issues found for WebCore/WebCore.xcodeproj/project.pbxproj. * WebCore.xcodeproj/project.pbxproj: Removed explicit file type for CSSPrimitiveValue.idl to make it match other IDL files. WebKit: Fixes the following warning: WARNING: Incorrect file type 'sourcecode.cpp.objcpp' for file 'WebStringTruncator.h'. 1 issues found for WebKit/WebKit.xcodeproj/project.pbxproj. * WebKit.xcodeproj/project.pbxproj: Removed explicit file type for WebStringTruncator.h to make it match other header files. WebKitTools: Fixes the following warnings: WARNING: Incorrect file type 'sourcecode.cpp.objcpp' for file 'PixelDumpSupport.cpp'. WARNING: Incorrect file type 'sourcecode.cpp.objcpp' for file 'LayoutTestController.cpp'. WARNING: Incorrect file type 'sourcecode.cpp.objcpp' for file 'WorkQueue.cpp'. WARNING: Incorrect file type 'sourcecode.cpp.objcpp' for file 'cg/PixelDumpSupportCG.cpp'. WARNING: Incorrect file type 'sourcecode.cpp.objcpp' for file 'GCController.cpp'. 5 issues found for WebKitTools/DumpRenderTree/DumpRenderTree.xcodeproj/project.pbxproj. * DumpRenderTree/DumpRenderTree.xcodeproj/project.pbxproj: Removed explicit file type for *.cpp files above to make them match other C++ source files. This exposed the fact that DumpRenderTreeMac.h was not safe to include in C++ source, which caused PixelDumpSupport.cpp and PixelDumpSupportCG.cpp to fail to build. * DumpRenderTree/PixelDumpSupport.cpp: Adjusted header order. * DumpRenderTree/mac/DumpRenderTreeMac.h: Made safe to include in C++ source files. Included CoreFoundation/CoreFoundation.h to make sure all CF types were defined. Removed CFStringRef typedef. --- 8 files changed, 75 insertions(+), 10 deletions(-)
Attachments
Patch (17.75 KB, patch)
2010-10-21 00:49 PDT, David Kilzer (:ddkilzer)
aroben: review+
David Kilzer (:ddkilzer)
Comment 1 2010-10-21 09:22:45 PDT
Note You need to log in before you can comment on or make changes to this bug.