third_party/WebKit/WebKitTools/DumpRenderTree/PixelDumpSupport.cpp
@@ -28,9 +28,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
  */
 
 #include "config.h"
+#include "PixelDumpSupport.h"
+
 #include "DumpRenderTree.h"
 #include "LayoutTestController.h"
-#include "PixelDumpSupport.h"
 #include <cstdio>
 #include <wtf/Assertions.h>
 #include <wtf/RefPtr.h>
