third_party/WebKit/WebKitTools/DumpRenderTree/mac/DumpRenderTreeMac.h
@@ -30,6 +30,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef DumpRenderTreeMac_h
 #define DumpRenderTreeMac_h
 
+#include <CoreFoundation/CoreFoundation.h>
+
 // FIXME: we should add a config.h file for DumpRenderTree.
 #define WTF_PLATFORM_CF 1
 
@@ -41,14 +43,21 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #define BUILDING_ON_SNOW_LEOPARD 1
 #endif
 
+#ifdef __OBJC__
 @class DumpRenderTreeDraggingInfo;
 @class NavigationController;
 @class PolicyDelegate;
 @class WebFrame;
 @class WebScriptWorld;
 @class WebView;
-
-typedef const struct __CFString* CFStringRef;
+#else
+class DumpRenderTreeDraggingInfo;
+class NavigationController;
+class PolicyDelegate;
+class WebFrame;
+class WebScriptWorld;
+class WebView;
+#endif
 
 extern CFMutableArrayRef openWindowsRef;
 extern CFMutableSetRef disallowedURLs;
